🚧 fix： 新增（重做redo）功能，或者叫Ctrl + shift + z功能

--- a/src/components/custom-leaflet-draw/index.scss
+++ b/src/components/custom-leaflet-draw/index.scss
@@ -44,7 +44,7 @@ $iconWidth: 36px;
   position: absolute;
   width: max-content;
   right: 50px + $iconWidth;
-  width: 120px;
+  width: 700px;
   display: flex;
   gap: 3px;
   top: 0px;
